--- a/src/components/Board/board.css
+++ b/src/components/Board/board.css
@@ -3,7 +3,7 @@
 	height: 700px;
 	display: flex;
 	flex-direction: column;
-	margin: 50px auto;
+	margin: 20px auto;
 	margin-top: 15px;
 }
 
@@ -50,7 +50,7 @@
 }
 
 .helper-button {
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 550;
 	padding: 5px 8px;
 }
@@ -69,4 +69,20 @@
 	color: #f3eff5;
 	cursor: pointer;
 	transition: 500ms;
+}
+
+#previous {
+	margin: 20px auto;
+	background-color: #f3eff5;
+	color: #72b01d;
+	box-shadow: 1px 2px 4px 0px #0d0a0b;
+	border: 1px solid #72b01d;
+	transition: 500ms;
+}
+
+#previous:hover {
+	background-color: #0d0a0b;
+	color: #72b01d;
+	transition: 750ms;
+	cursor: pointer;
 }
