--- a/src/components/CustomSelect/customselect.css
+++ b/src/components/CustomSelect/customselect.css
@@ -27,12 +27,20 @@ select:hover {
 	color: #f3eff5;
 }
 
-select > option {
-	font-size: 16px;
+select::after {
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: "";
 	background-color: #f3eff5;
+	width: 100%;
+	height: 100%;
+}
+
+option {
+	font-size: 16px;
+	background-color: #454955;
 	color: #72b01d;
-	animation: growDown 1000ms ease-in-out;
-	animation: slideDown 300ms (3 * 60ms) ease-in-out forwards;
 }
 
 @keyframes slideDown {
