--- a/src/style.css
+++ b/src/style.css
@@ -32,3 +32,10 @@ main {
 	flex-direction: column;
 	align-items: center;
 }
+
+.notifications {
+	position: absolute;
+	right: 20px;
+	top: 100px;
+	width: 15%;
+}
